[gd_scene load_steps=20 format=2]

[ext_resource path="res://Resources/Shaders/CooldownShader.tres" type="Shader" id=1]
[ext_resource path="res://Art/Abilities/password.png" type="Texture" id=2]
[ext_resource path="res://Client/Scenes/Menu/Abilities.gd" type="Script" id=3]
[ext_resource path="res://Art/Abilities/backdoor.png" type="Texture" id=4]
[ext_resource path="res://Art/Abilities/hack.png" type="Texture" id=5]
[ext_resource path="res://Art/Abilities/protect.png" type="Texture" id=6]
[ext_resource path="res://Art/Buttons/info.png" type="Texture" id=7]
[ext_resource path="res://Art/Buttons/list.png" type="Texture" id=8]
[ext_resource path="res://Resources/MainTheme.tres" type="Theme" id=9]
[ext_resource path="res://Client/Scenes/Menu/Menu.gd" type="Script" id=10]
[ext_resource path="res://Art/Abilities/scan.png" type="Texture" id=11]
[ext_resource path="res://Client/Scenes/Menu/MenuOptionButton.gd" type="Script" id=12]
[ext_resource path="res://Client/Scenes/Menu/Terminals.gd" type="Script" id=13]
[ext_resource path="res://Client/Scenes/Menu/Players.gd" type="Script" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/readyness = 1.0
shader_param/other_selected = false
shader_param/selected = false
shader_param/color = Vector3( 0.5, 1, 0.5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/readyness = 1.0
shader_param/other_selected = null
shader_param/selected = null
shader_param/color = Vector3( 0.8, 0.4, 0.8 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/readyness = 1.0
shader_param/other_selected = null
shader_param/selected = null
shader_param/color = Vector3( 1, 0.5, 0.5 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 1 )
shader_param/readyness = 1.0
shader_param/other_selected = null
shader_param/selected = null
shader_param/color = Vector3( 0.5, 0.5, 1 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 1 )
shader_param/readyness = 1.0
shader_param/other_selected = null
shader_param/selected = null
shader_param/color = Vector3( 0.8, 0.8, 0.4 )

[node name="Menu" type="Control"]
theme = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Notices" type="Button" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 41.0
margin_bottom = 41.0
rect_scale = Vector2( 5, 5 )
icon = ExtResource( 8 )
icon_align = 1
script = ExtResource( 12 )

[node name="Name" type="Label" parent="."]
margin_left = 245.0
margin_top = 49.0
margin_right = 276.0
margin_bottom = 56.0
rect_scale = Vector2( 7, 7 )
text = "Marin"
align = 1

[node name="Info" type="Button" parent="."]
margin_left = 611.0
margin_top = 25.0
margin_right = 628.0
margin_bottom = 42.0
rect_scale = Vector2( 5, 5 )
icon = ExtResource( 7 )
icon_align = 1
script = ExtResource( 12 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 68.0
margin_top = 168.0
margin_right = 149.0
margin_bottom = 198.0
rect_scale = Vector2( 7, 7 )

[node name="Terminals" type="GridContainer" parent="CenterContainer"]
margin_left = 40.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 15.0
columns = 5
script = ExtResource( 13 )

[node name="Players" type="HFlowContainer" parent="."]
margin_left = 82.0
margin_top = 491.0
margin_right = 220.0
margin_bottom = 574.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 14 )

[node name="Abilities" type="Control" parent="."]
margin_left = 152.0
margin_top = 953.0
margin_right = 211.0
margin_bottom = 994.0
rect_scale = Vector2( 7, 7 )
script = ExtResource( 3 )

[node name="NormalButtons" type="Control" parent="Abilities"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Crack" type="Button" parent="Abilities/NormalButtons"]
material = SubResource( 1 )
margin_left = 10.0
margin_right = 27.0
margin_bottom = 17.0
theme = ExtResource( 9 )
toggle_mode = true
icon = ExtResource( 2 )

[node name="Backdoor" type="Button" parent="Abilities/NormalButtons"]
material = SubResource( 2 )
margin_left = 31.0
margin_right = 48.0
margin_bottom = 17.0
theme = ExtResource( 9 )
toggle_mode = true
icon = ExtResource( 4 )

[node name="Hack" type="Button" parent="Abilities/NormalButtons"]
material = SubResource( 3 )
margin_top = 21.0
margin_right = 17.0
margin_bottom = 38.0
theme = ExtResource( 9 )
toggle_mode = true
icon = ExtResource( 5 )

[node name="Protect" type="Button" parent="Abilities/NormalButtons"]
material = SubResource( 4 )
margin_left = 21.0
margin_top = 21.0
margin_right = 38.0
margin_bottom = 38.0
theme = ExtResource( 9 )
toggle_mode = true
icon = ExtResource( 6 )

[node name="Scan" type="Button" parent="Abilities/NormalButtons"]
material = SubResource( 5 )
margin_left = 42.0
margin_top = 21.0
margin_right = 59.0
margin_bottom = 38.0
theme = ExtResource( 9 )
toggle_mode = true
icon = ExtResource( 11 )

[node name="ColorButtons" type="HBoxContainer" parent="Abilities"]
visible = false
margin_left = 5.28571
margin_top = -14.7143
margin_right = 52.2857
margin_bottom = -1.71429

[node name="RedButton" type="Button" parent="Abilities/ColorButtons"]
modulate = Color( 1, 0.5, 0.5, 1 )
margin_right = 13.0
margin_bottom = 13.0
text = "R"

[node name="BlueButton" type="Button" parent="Abilities/ColorButtons"]
modulate = Color( 0.5, 0.5, 1, 1 )
margin_left = 17.0
margin_right = 30.0
margin_bottom = 13.0
text = "B"

[node name="YellowButton" type="Button" parent="Abilities/ColorButtons"]
modulate = Color( 0.75, 0.75, 0.5, 1 )
margin_left = 34.0
margin_right = 47.0
margin_bottom = 13.0
text = "Y"

[connection signal="pressed" from="Notices" to="." method="open_messages"]
[connection signal="pressed" from="Info" to="." method="open_info"]
[connection signal="pressed_terminal_button" from="CenterContainer/Terminals" to="." method="open_terminal"]
[connection signal="player_chosen" from="Players" to="Abilities" method="_on_chosen_player"]
[connection signal="deselected" from="Abilities" to="CenterContainer/Terminals" method="_on_deselected_ability"]
[connection signal="deselected" from="Abilities" to="Players" method="_on_deselected_ability"]
[connection signal="selected_player_ability" from="Abilities" to="CenterContainer/Terminals" method="_on_selected_wrong_ability"]
[connection signal="selected_player_ability" from="Abilities" to="Players" method="_on_selected_ability"]
[connection signal="selected_terminal_ability" from="Abilities" to="CenterContainer/Terminals" method="_on_selected_ability"]
[connection signal="selected_terminal_ability" from="Abilities" to="Players" method="_on_selected_wrong_ability"]
[connection signal="used_backdoor" from="Abilities" to="." method="_used_backdoor"]
[connection signal="used_crack" from="Abilities" to="." method="_used_crack"]
[connection signal="used_hack" from="Abilities" to="." method="_used_hack"]
[connection signal="used_protect" from="Abilities" to="." method="_used_protect"]
[connection signal="used_sabotage" from="Abilities" to="." method="_used_sabotage"]
[connection signal="used_scan" from="Abilities" to="." method="_used_scan"]
[connection signal="toggled" from="Abilities/NormalButtons/Crack" to="Abilities" method="_on_button_toggled"]
[connection signal="toggled" from="Abilities/NormalButtons/Backdoor" to="Abilities" method="_on_button_toggled"]
[connection signal="toggled" from="Abilities/NormalButtons/Hack" to="Abilities" method="_on_button_toggled"]
[connection signal="toggled" from="Abilities/NormalButtons/Protect" to="Abilities" method="_on_button_toggled"]
[connection signal="toggled" from="Abilities/NormalButtons/Scan" to="Abilities" method="_on_button_toggled"]
[connection signal="pressed" from="Abilities/ColorButtons/RedButton" to="Abilities" method="_on_chosen_red_button"]
[connection signal="pressed" from="Abilities/ColorButtons/BlueButton" to="Abilities" method="_on_chosen_blue_button"]
[connection signal="pressed" from="Abilities/ColorButtons/YellowButton" to="Abilities" method="_on_chosen_yellow_button"]
